[gd_scene load_steps=20 format=3 uid="uid://bj6s526sep4xw"]

[ext_resource type="FontFile" uid="uid://drrhlpxmc4pq4" path="res://Fonts/FiraCode-VariableFont_wght.ttf" id="1_cd7xi"]
[ext_resource type="Script" path="res://Scripts/file_manager.gd" id="1_x00ag"]
[ext_resource type="Script" path="res://Scripts/settings.gd" id="2_7x3ll"]
[ext_resource type="FontFile" uid="uid://d1v66naqhhggj" path="res://Fonts/FiraCode-Regular.ttf" id="2_wpuu1"]
[ext_resource type="PackedScene" uid="uid://dk43uvvc3j228" path="res://Scenes/settings_list.tscn" id="5_6usn0"]
[ext_resource type="Script" path="res://Scripts/file_dialog.gd" id="5_bhd70"]
[ext_resource type="PackedScene" uid="uid://c2gyvklbna1ss" path="res://Scenes/theme_chooser.tscn" id="6_10xx2"]
[ext_resource type="VideoStream" path="res://Videos/jumping_cat.ogv" id="7_aq7lb"]
[ext_resource type="Shader" path="res://Shaders/greenscreen.gdshader" id="7_gkiie"]
[ext_resource type="Script" path="res://Scripts/theme_chooser.gd" id="9_ba634"]
[ext_resource type="Script" path="res://Scripts/hyperlink.gd" id="11_m1mse"]
[ext_resource type="Script" path="res://Scripts/camera.gd" id="12_x8fwh"]
[ext_resource type="AudioStream" uid="uid://bw4elmrq7utxl" path="res://Music/ES_Social Feedia - Heyson.wav" id="14_tdfqv"]

[sub_resource type="Environment" id="Environment_7g1iw"]
background_mode = 3
glow_enabled = true
glow_blend_mode = 0
glow_hdr_threshold = 0.0

[sub_resource type="CodeHighlighter" id="CodeHighlighter_p2au2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_elmks"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h17vr"]
shader = ExtResource("7_gkiie")
shader_parameter/key_color = Color(0.00392157, 0.701961, 0.25098, 1)
shader_parameter/similarity = 0.18
shader_parameter/smoothness = 0.08
shader_parameter/spill = 0.04

[sub_resource type="Curve2D" id="Curve2D_stitx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wbxv0"]

[node name="Editor" type="Node2D"]
script = ExtResource("1_x00ag")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7g1iw")

[node name="ExternalBackground" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = -2046.0
offset_top = -742.0
offset_right = 4452.0
offset_bottom = 51258.0
color = Color(0, 0, 0, 1)

[node name="Code" type="CodeEdit" parent="."]
unique_name_in_owner = true
offset_right = 2044.0
offset_bottom = 44630.0
theme_override_colors/current_line_color = Color(0.168627, 0.168627, 0.168627, 1)
theme_override_colors/background_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0.321569, 0.545098, 1, 1)
theme_override_fonts/font = ExtResource("2_wpuu1")
theme_override_font_sizes/font_size = 0
text = "function getRandomColor() {
  const letters = '0123456789ABCDEF';
  let color = '#';
  for (let i = 0; i < 6; i++) {
    color += letters[Math.floor(Math.random() * 16)];
  }
  return color;
}

function generateHighlightedText() {
  const paragraph = document.createElement('p');
  const words = ['Lorem', 'ipsum', 'dolor', 'sit', 'amet', 'consectetur', 'adipiscing', 'elit'];

  words.forEach(word => {
    const span = document.createElement('span');
    span.textContent = word + ' ';
    span.style.color = getRandomColor();
    paragraph.appendChild(span);
  });

  document.body.appendChild(paragraph);
}

generateHighlightedText();
"
context_menu_enabled = false
scroll_smooth = true
scroll_v_scroll_speed = 150.0
minimap_draw = true
caret_blink = true
syntax_highlighter = SubResource("CodeHighlighter_p2au2")
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
gutters_draw_line_numbers = true
code_completion_enabled = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("2_7x3ll")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
offset_right = 1920.0
offset_bottom = 1080.0

[node name="FileDialog" type="RichTextLabel" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_elmks")
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -492.0
offset_top = 119.0
offset_right = -30.0
offset_bottom = 749.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("2_wpuu1")
text = "gpake
gka
ekga
eogka
ek g
paekga
epk 
gake 
g"
autowrap_mode = 0
script = ExtResource("5_bhd70")

[node name="AutoSaveTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Intro" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="Intro"]
auto_translate_mode = 1
offset_left = 836.0
offset_top = 112.0
offset_right = 3336.0
offset_bottom = 2112.0
scale = Vector2(0.235, 0.235)
theme_override_fonts/normal_font = ExtResource("1_cd7xi")
theme_override_font_sizes/normal_font_size = 376
bbcode_enabled = true
text = "Greetings!"

[node name="RichTextLabel2" type="RichTextLabel" parent="Intro"]
auto_translate_mode = 1
offset_left = 841.0
offset_top = 244.0
offset_right = 3341.0
offset_bottom = 2244.0
scale = Vector2(0.235, 0.235)
theme_override_fonts/normal_font = ExtResource("1_cd7xi")
theme_override_font_sizes/normal_font_size = 146
bbcode_enabled = true
text = "You're currently using [color=#c9daf8]Bussin[/color] [color=#85c6ff]GriddyCode[/color]"

[node name="RichTextLabel3" type="RichTextLabel" parent="Intro"]
auto_translate_mode = 1
offset_left = 841.0
offset_top = 380.0
offset_right = 3341.0
offset_bottom = 2380.0
scale = Vector2(0.235, 0.235)
theme_override_fonts/normal_font = ExtResource("1_cd7xi")
theme_override_font_sizes/normal_font_size = 106
bbcode_enabled = true
text = "To get started, please choose a file."

[node name="Settings" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Settings"]
material = SubResource("ShaderMaterial_h17vr")
offset_left = 535.0
offset_top = 178.0
offset_right = 1015.0
offset_bottom = 642.0
audio_track = 128
stream = ExtResource("7_aq7lb")
autoplay = true
loop = true

[node name="SettingsList" parent="Settings" instance=ExtResource("5_6usn0")]
unique_name_in_owner = true
offset_left = -121.31
offset_top = 13.0
offset_right = 41.37
offset_bottom = 55.665
metadata/_edit_use_anchors_ = true

[node name="ThemePicker" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ThemeChooser" parent="ThemePicker" instance=ExtResource("6_10xx2")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
offset_left = -750.0
offset_top = 17.0
offset_right = -718.0
offset_bottom = 37.0
script = ExtResource("9_ba634")

[node name="Info" type="Node2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
position = Vector2(-1691.12, 0)

[node name="RichTextLabel" type="RichTextLabel" parent="Info"]
auto_translate_mode = 1
offset_left = 285.0
offset_top = 28.0
offset_right = 4821.0
offset_bottom = 1219.0
scale = Vector2(0.235, 0.235)
theme_override_fonts/normal_font = ExtResource("1_cd7xi")
theme_override_font_sizes/normal_font_size = 376
bbcode_enabled = true
text = "[color=#c9daf8]Bussin[/color] [color=#85c6ff]GriddyCode[/color]"

[node name="RichTextLabel2" type="RichTextLabel" parent="Info"]
auto_translate_mode = 1
offset_left = 293.0
offset_top = 165.0
offset_right = 6395.0
offset_bottom = 4616.0
scale = Vector2(0.235, 0.235)
theme_override_fonts/normal_font = ExtResource("1_cd7xi")
theme_override_font_sizes/normal_font_size = 121
bbcode_enabled = true
text = "Created by [url=https://youtube.com/facedevstuff][color=#b4a7d6]Face[/color][/url] & the contributors at [url=https://github.com/face-hh/griddycode][color=#b4a7d6]GitHub[/color][/url]

Shortcuts:
CTRL + O     - open file picker. Navigate with ↑ ↓ ⏎
CTRL + ,     - open settings.
CTRL + T     - open theme picker.
CTRL + I     - open this panel.
[font_size=85]
[color=#b6b6b6] Copyright (c) 2024 Bussin Industries. All Rights Reserved.


 * You are permitted to modify Bussin GriddyCode using the Lua modding feature.
 * However, commercial redistribution of this software without explicit permission
 * from Bussin Industries is strictly prohibited.

 * Bussin GriddyCode is a product created by Bussin Industries, offered as-is.
 * Bussin Industries is not a legal entity, and the use of the term \"Industries\"
 * is for branding purposes only. Bussin GriddyCode is a community-driven project,
 * and users are solely responsible for compliance with applicable laws and
 * regulations.
 * 
 * In no event shall Bussin Industries be liable for any claims, damages, or
 * other liability, whether in an action of contract, tort, or otherwise,
 * arising from, out of, or in connection with Bussin GriddyCode or the use or
 * other dealings in Bussin GriddyCode.
 * 
 * Use Bussin GriddyCode responsibly and adhere to the laws of your jurisdiction.
[/color]
[/font_size]"
script = ExtResource("11_m1mse")

[node name="Misc" type="Node2D" parent="."]

[node name="Cam" type="Camera2D" parent="Misc"]
unique_name_in_owner = true
position = Vector2(92, 48)
zoom = Vector2(10, 10)
script = ExtResource("12_x8fwh")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_stitx")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

[node name="ShaderLayer" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_wbxv0")
offset_left = -2011.0
offset_top = -700.0
offset_right = 4408.0
offset_bottom = 5193.0
mouse_filter = 2
color = Color(0.46455, 0.475028, 0.740924, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_tdfqv")

[node name="AudioTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="caret_changed" from="Code" to="Code" method="_on_caret_changed"]
[connection signal="code_completion_requested" from="Code" to="Code" method="_on_code_completion_requested"]
[connection signal="text_changed" from="Code" to="Code" method="_on_text_changed"]
[connection signal="ui_close" from="FileDialog" to="Code" method="_on_file_dialog_ui_close"]
[connection signal="timeout" from="AutoSaveTimer" to="." method="_on_auto_save_timer_timeout"]
[connection signal="item_focused" from="ThemePicker/ThemeChooser" to="." method="_on_theme_chooser_item_focused"]
[connection signal="item_selected" from="ThemePicker/ThemeChooser" to="." method="_on_theme_chooser_item_selected"]
